--- a/LearningCPP/Makefile
+++ b/LearningCPP/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ 90_ProgrammingChallange - Debug ]----------"
-	@cd "90_ProgrammingChallange" && "$(MAKE)" -f  "90_ProgrammingChallange.mk"
+	@echo "----------Building project:[ SectionEnd_ChallengeAssignment_LetterPyramid - Debug ]----------"
+	@cd "SectionEnd_ChallengeAssignment_LetterPyramid" && "$(MAKE)" -f  "SectionEnd_ChallengeAssignment_LetterPyramid.mk"
 clean:
-	@echo "----------Cleaning project:[ 90_ProgrammingChallange - Debug ]----------"
-	@cd "90_ProgrammingChallange" && "$(MAKE)" -f  "90_ProgrammingChallange.mk" clean
+	@echo "----------Cleaning project:[ SectionEnd_ChallengeAssignment_LetterPyramid - Debug ]----------"
+	@cd "SectionEnd_ChallengeAssignment_LetterPyramid" && "$(MAKE)" -f  "SectionEnd_ChallengeAssignment_LetterPyramid.mk" clean
